--- a/package.json
+++ b/package.json
@@ -27,20 +27,23 @@
 		"concurrently": "^4.1.0",
 		"cross-env": "^5.2.0",
 		"css-loader": "^5.2.0",
+		"style-loader": "^2.0.0",
 		"isomorphic-fetch": "^2.2.1",
 		"nodemon": "^1.18.9",
 		"sass": "^1.32.8",
-		"sass-loader": "^10.1.1",
-		"style-loader": "^2.0.0",
 		"webpack": "^4.46.0",
-		"webpack-cli": "^3.2.3",
+		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.2"
 	},
 	"dependencies": {
+		"css": "^3.0.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mongoose": "^5.12.2",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"prop-types": "^15.6.1",
+		"node-sass": "^5.0.0",
+		"sass-loader": "^10.1.1"
 	}
 }
