--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mongoose": "^5.12.2",
+		"node-sass": "^5.0.0",
+		"prop-types": "^15.6.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"prop-types": "^15.6.1",
-		"node-sass": "^5.0.0",
+		"reactjs-popup": "^2.0.4",
 		"sass-loader": "^10.1.1"
 	}
 }
