--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"webpack-dev-server": "^3.11.2"
 	},
 	"dependencies": {
+		"chromogen": "^1.4.1",
 		"css": "^3.0.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
