--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
 		"@babel/core": "^7.13.14",
 		"@babel/preset-env": "^7.13.12",
 		"@babel/preset-react": "^7.13.13",
+		"@testing-library/react-hooks": "^5.1.2",
 		"@webpack-cli/serve": "^1.3.1",
 		"babel-loader": "^8.2.2",
 		"concurrently": "^4.1.0",
 		"cross-env": "^5.2.0",
 		"css-loader": "^5.2.0",
-		"style-loader": "^2.0.0",
 		"isomorphic-fetch": "^2.2.1",
 		"nodemon": "^1.18.9",
+		"react-test-renderer": "^16.14.0",
 		"sass": "^1.32.8",
+		"style-loader": "^2.0.0",
 		"webpack": "^4.46.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.2"
@@ -39,13 +41,19 @@
 		"chromogen": "^1.4.1",
 		"css": "^3.0.0",
 		"dotenv": "^8.2.0",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.6",
 		"express": "^4.17.1",
+		"jest": "^26.6.3",
 		"mongoose": "^5.12.2",
 		"node-sass": "^5.0.0",
 		"prop-types": "^15.6.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "^16.8.0  || ^17.0.0",
+		"react-dom": "^16.8.0  || ^17.0.0",
 		"reactjs-popup": "^2.0.4",
 		"sass-loader": "^10.1.1"
+	},
+	"peerDependencies": {
+		"react": "^16.8.0  || ^17.0.0"
 	}
 }
